--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,6 @@ layout: default
   {{ content }}
 </div>
 
-<div class="notecomments">
+<div class="postcomments">
   {% include disqus.html %}	 
 </div>
