--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@ nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
-    background-color: black
+    border: 2px solid darkblue;
+    border-radius: 2px;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -34,7 +35,6 @@ p {
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
-    background-color: red
 }
 ul.posts { 
     margin: 20px auto 40px; 
