--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    colour: white;
+    colour: #ffffff;
     padding: 3px;
     list-style: none;
     font-weight: bold;
