--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: #e6e6e6;
 }
 a:hover {
     text-decoration: underline;
